parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement_list statement ENTER
Rule 2     statement_list -> statement ENTER
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     statement -> read_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> write_statement
Rule 9     statement -> assignment_statement
Rule 10    assignment_statement -> ID EQUALS expression SEMICOLON
Rule 11    read_statement -> read ID SEMICOLON
Rule 12    if_statement -> if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
Rule 13    if_statement -> if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
Rule 14    if_statement -> if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
Rule 15    if_statement -> if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
Rule 16    condition -> BOOL
Rule 17    while_statement -> while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
Rule 18    while_statement -> while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
Rule 19    write_statement -> write expression SEMICOLON
Rule 20    expression -> ID
Rule 21    expression -> NUM
Rule 22    expression -> operando_statement
Rule 23    operando_statement -> expression OPERATOR expression

Terminals, with rules where they appear

BOOL                 : 16
ENTER                : 1 2 12 13 13 14 15 15 17 18
EQUALS               : 10
ID                   : 10 11 20
NUM                  : 21
OPERATOR             : 23
SEMICOLON            : 10 11 12 13 14 15 17 18 19
do                   : 17 18
else                 : 13 15
endif                : 12 13 14 15
error                : 
if                   : 12 13 14 15
parentesis_der       : 12 13 14 15 17 18
parentesis_izq       : 12 13 14 15 17 18
read                 : 11
then                 : 12 13 14 15
wend                 : 17 18
while                : 17 18
write                : 19

Nonterminals, with rules where they appear

assignment_statement : 9
condition            : 12 13 17
expression           : 10 19 23 23
if_statement         : 6
operando_statement   : 14 15 18 22
read_statement       : 5
statement            : 1 2 3 4
statement_list       : 1 3 12 13 13 14 15 15 17 18 0
while_statement      : 7
write_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement_list statement ENTER
    (2) statement_list -> . statement ENTER
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 1

    (0) S' -> statement_list .
    (1) statement_list -> statement_list . statement ENTER
    (3) statement_list -> statement_list . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement                      shift and go to state 13
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 2

    (2) statement_list -> statement . ENTER
    (4) statement_list -> statement .

    ENTER           shift and go to state 14
    read            reduce using rule 4 (statement_list -> statement .)
    if              reduce using rule 4 (statement_list -> statement .)
    while           reduce using rule 4 (statement_list -> statement .)
    write           reduce using rule 4 (statement_list -> statement .)
    ID              reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    endif           reduce using rule 4 (statement_list -> statement .)
    else            reduce using rule 4 (statement_list -> statement .)
    wend            reduce using rule 4 (statement_list -> statement .)


state 3

    (5) statement -> read_statement .

    ENTER           reduce using rule 5 (statement -> read_statement .)
    read            reduce using rule 5 (statement -> read_statement .)
    if              reduce using rule 5 (statement -> read_statement .)
    while           reduce using rule 5 (statement -> read_statement .)
    write           reduce using rule 5 (statement -> read_statement .)
    ID              reduce using rule 5 (statement -> read_statement .)
    $end            reduce using rule 5 (statement -> read_statement .)
    endif           reduce using rule 5 (statement -> read_statement .)
    else            reduce using rule 5 (statement -> read_statement .)
    wend            reduce using rule 5 (statement -> read_statement .)


state 4

    (6) statement -> if_statement .

    ENTER           reduce using rule 6 (statement -> if_statement .)
    read            reduce using rule 6 (statement -> if_statement .)
    if              reduce using rule 6 (statement -> if_statement .)
    while           reduce using rule 6 (statement -> if_statement .)
    write           reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    endif           reduce using rule 6 (statement -> if_statement .)
    else            reduce using rule 6 (statement -> if_statement .)
    wend            reduce using rule 6 (statement -> if_statement .)


state 5

    (7) statement -> while_statement .

    ENTER           reduce using rule 7 (statement -> while_statement .)
    read            reduce using rule 7 (statement -> while_statement .)
    if              reduce using rule 7 (statement -> while_statement .)
    while           reduce using rule 7 (statement -> while_statement .)
    write           reduce using rule 7 (statement -> while_statement .)
    ID              reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    endif           reduce using rule 7 (statement -> while_statement .)
    else            reduce using rule 7 (statement -> while_statement .)
    wend            reduce using rule 7 (statement -> while_statement .)


state 6

    (8) statement -> write_statement .

    ENTER           reduce using rule 8 (statement -> write_statement .)
    read            reduce using rule 8 (statement -> write_statement .)
    if              reduce using rule 8 (statement -> write_statement .)
    while           reduce using rule 8 (statement -> write_statement .)
    write           reduce using rule 8 (statement -> write_statement .)
    ID              reduce using rule 8 (statement -> write_statement .)
    $end            reduce using rule 8 (statement -> write_statement .)
    endif           reduce using rule 8 (statement -> write_statement .)
    else            reduce using rule 8 (statement -> write_statement .)
    wend            reduce using rule 8 (statement -> write_statement .)


state 7

    (9) statement -> assignment_statement .

    ENTER           reduce using rule 9 (statement -> assignment_statement .)
    read            reduce using rule 9 (statement -> assignment_statement .)
    if              reduce using rule 9 (statement -> assignment_statement .)
    while           reduce using rule 9 (statement -> assignment_statement .)
    write           reduce using rule 9 (statement -> assignment_statement .)
    ID              reduce using rule 9 (statement -> assignment_statement .)
    $end            reduce using rule 9 (statement -> assignment_statement .)
    endif           reduce using rule 9 (statement -> assignment_statement .)
    else            reduce using rule 9 (statement -> assignment_statement .)
    wend            reduce using rule 9 (statement -> assignment_statement .)


state 8

    (11) read_statement -> read . ID SEMICOLON

    ID              shift and go to state 15


state 9

    (10) assignment_statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 16


state 10

    (12) if_statement -> if . parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> if . parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> if . parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> if . parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON

    parentesis_izq  shift and go to state 17


state 11

    (17) while_statement -> while . parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> while . parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON

    parentesis_izq  shift and go to state 18


state 12

    (19) write_statement -> write . expression SEMICOLON
    (20) expression -> . ID
    (21) expression -> . NUM
    (22) expression -> . operando_statement
    (23) operando_statement -> . expression OPERATOR expression

    ID              shift and go to state 20
    NUM             shift and go to state 21

    expression                     shift and go to state 19
    operando_statement             shift and go to state 22

state 13

    (1) statement_list -> statement_list statement . ENTER
    (3) statement_list -> statement_list statement .

    ENTER           shift and go to state 23
    read            reduce using rule 3 (statement_list -> statement_list statement .)
    if              reduce using rule 3 (statement_list -> statement_list statement .)
    while           reduce using rule 3 (statement_list -> statement_list statement .)
    write           reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    endif           reduce using rule 3 (statement_list -> statement_list statement .)
    else            reduce using rule 3 (statement_list -> statement_list statement .)
    wend            reduce using rule 3 (statement_list -> statement_list statement .)


state 14

    (2) statement_list -> statement ENTER .

    read            reduce using rule 2 (statement_list -> statement ENTER .)
    if              reduce using rule 2 (statement_list -> statement ENTER .)
    while           reduce using rule 2 (statement_list -> statement ENTER .)
    write           reduce using rule 2 (statement_list -> statement ENTER .)
    ID              reduce using rule 2 (statement_list -> statement ENTER .)
    $end            reduce using rule 2 (statement_list -> statement ENTER .)
    endif           reduce using rule 2 (statement_list -> statement ENTER .)
    else            reduce using rule 2 (statement_list -> statement ENTER .)
    wend            reduce using rule 2 (statement_list -> statement ENTER .)


state 15

    (11) read_statement -> read ID . SEMICOLON

    SEMICOLON       shift and go to state 24


state 16

    (10) assignment_statement -> ID EQUALS . expression SEMICOLON
    (20) expression -> . ID
    (21) expression -> . NUM
    (22) expression -> . operando_statement
    (23) operando_statement -> . expression OPERATOR expression

    ID              shift and go to state 20
    NUM             shift and go to state 21

    expression                     shift and go to state 25
    operando_statement             shift and go to state 22

state 17

    (12) if_statement -> if parentesis_izq . condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> if parentesis_izq . condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> if parentesis_izq . operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> if parentesis_izq . operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (16) condition -> . BOOL
    (23) operando_statement -> . expression OPERATOR expression
    (20) expression -> . ID
    (21) expression -> . NUM
    (22) expression -> . operando_statement

    BOOL            shift and go to state 28
    ID              shift and go to state 20
    NUM             shift and go to state 21

    condition                      shift and go to state 26
    operando_statement             shift and go to state 27
    expression                     shift and go to state 29

state 18

    (17) while_statement -> while parentesis_izq . condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> while parentesis_izq . operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (16) condition -> . BOOL
    (23) operando_statement -> . expression OPERATOR expression
    (20) expression -> . ID
    (21) expression -> . NUM
    (22) expression -> . operando_statement

    BOOL            shift and go to state 28
    ID              shift and go to state 20
    NUM             shift and go to state 21

    condition                      shift and go to state 30
    operando_statement             shift and go to state 31
    expression                     shift and go to state 29

state 19

    (19) write_statement -> write expression . SEMICOLON
    (23) operando_statement -> expression . OPERATOR expression

    SEMICOLON       shift and go to state 32
    OPERATOR        shift and go to state 33


state 20

    (20) expression -> ID .

    SEMICOLON       reduce using rule 20 (expression -> ID .)
    OPERATOR        reduce using rule 20 (expression -> ID .)
    parentesis_der  reduce using rule 20 (expression -> ID .)


state 21

    (21) expression -> NUM .

    SEMICOLON       reduce using rule 21 (expression -> NUM .)
    OPERATOR        reduce using rule 21 (expression -> NUM .)
    parentesis_der  reduce using rule 21 (expression -> NUM .)


state 22

    (22) expression -> operando_statement .

    SEMICOLON       reduce using rule 22 (expression -> operando_statement .)
    OPERATOR        reduce using rule 22 (expression -> operando_statement .)
    parentesis_der  reduce using rule 22 (expression -> operando_statement .)


state 23

    (1) statement_list -> statement_list statement ENTER .

    read            reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    if              reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    while           reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    write           reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    ID              reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    $end            reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    endif           reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    else            reduce using rule 1 (statement_list -> statement_list statement ENTER .)
    wend            reduce using rule 1 (statement_list -> statement_list statement ENTER .)


state 24

    (11) read_statement -> read ID SEMICOLON .

    ENTER           reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    read            reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    if              reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    while           reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    write           reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    ID              reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    $end            reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    endif           reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    else            reduce using rule 11 (read_statement -> read ID SEMICOLON .)
    wend            reduce using rule 11 (read_statement -> read ID SEMICOLON .)


state 25

    (10) assignment_statement -> ID EQUALS expression . SEMICOLON
    (23) operando_statement -> expression . OPERATOR expression

    SEMICOLON       shift and go to state 34
    OPERATOR        shift and go to state 33


state 26

    (12) if_statement -> if parentesis_izq condition . parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> if parentesis_izq condition . parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON

    parentesis_der  shift and go to state 35


state 27

    (14) if_statement -> if parentesis_izq operando_statement . parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> if parentesis_izq operando_statement . parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (22) expression -> operando_statement .

    parentesis_der  shift and go to state 36
    OPERATOR        reduce using rule 22 (expression -> operando_statement .)


state 28

    (16) condition -> BOOL .

    parentesis_der  reduce using rule 16 (condition -> BOOL .)


state 29

    (23) operando_statement -> expression . OPERATOR expression

    OPERATOR        shift and go to state 33


state 30

    (17) while_statement -> while parentesis_izq condition . parentesis_der do ENTER statement_list wend SEMICOLON

    parentesis_der  shift and go to state 37


state 31

    (18) while_statement -> while parentesis_izq operando_statement . parentesis_der do ENTER statement_list wend SEMICOLON
    (22) expression -> operando_statement .

    parentesis_der  shift and go to state 38
    OPERATOR        reduce using rule 22 (expression -> operando_statement .)


state 32

    (19) write_statement -> write expression SEMICOLON .

    ENTER           reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    read            reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    if              reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    while           reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    write           reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    ID              reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    $end            reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    endif           reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    else            reduce using rule 19 (write_statement -> write expression SEMICOLON .)
    wend            reduce using rule 19 (write_statement -> write expression SEMICOLON .)


state 33

    (23) operando_statement -> expression OPERATOR . expression
    (20) expression -> . ID
    (21) expression -> . NUM
    (22) expression -> . operando_statement
    (23) operando_statement -> . expression OPERATOR expression

    ID              shift and go to state 20
    NUM             shift and go to state 21

    expression                     shift and go to state 39
    operando_statement             shift and go to state 22

state 34

    (10) assignment_statement -> ID EQUALS expression SEMICOLON .

    ENTER           reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    read            reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    if              reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    while           reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    write           reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    ID              reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    endif           reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    else            reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)
    wend            reduce using rule 10 (assignment_statement -> ID EQUALS expression SEMICOLON .)


state 35

    (12) if_statement -> if parentesis_izq condition parentesis_der . then ENTER statement_list endif SEMICOLON
    (13) if_statement -> if parentesis_izq condition parentesis_der . then ENTER statement_list else ENTER statement_list endif SEMICOLON

    then            shift and go to state 40


state 36

    (14) if_statement -> if parentesis_izq operando_statement parentesis_der . then ENTER statement_list endif SEMICOLON
    (15) if_statement -> if parentesis_izq operando_statement parentesis_der . then ENTER statement_list else ENTER statement_list endif SEMICOLON

    then            shift and go to state 41


state 37

    (17) while_statement -> while parentesis_izq condition parentesis_der . do ENTER statement_list wend SEMICOLON

    do              shift and go to state 42


state 38

    (18) while_statement -> while parentesis_izq operando_statement parentesis_der . do ENTER statement_list wend SEMICOLON

    do              shift and go to state 43


state 39

    (23) operando_statement -> expression OPERATOR expression .
    (23) operando_statement -> expression . OPERATOR expression

  ! shift/reduce conflict for OPERATOR resolved as shift
    SEMICOLON       reduce using rule 23 (operando_statement -> expression OPERATOR expression .)
    parentesis_der  reduce using rule 23 (operando_statement -> expression OPERATOR expression .)
    OPERATOR        shift and go to state 33

  ! OPERATOR        [ reduce using rule 23 (operando_statement -> expression OPERATOR expression .) ]


state 40

    (12) if_statement -> if parentesis_izq condition parentesis_der then . ENTER statement_list endif SEMICOLON
    (13) if_statement -> if parentesis_izq condition parentesis_der then . ENTER statement_list else ENTER statement_list endif SEMICOLON

    ENTER           shift and go to state 44


state 41

    (14) if_statement -> if parentesis_izq operando_statement parentesis_der then . ENTER statement_list endif SEMICOLON
    (15) if_statement -> if parentesis_izq operando_statement parentesis_der then . ENTER statement_list else ENTER statement_list endif SEMICOLON

    ENTER           shift and go to state 45


state 42

    (17) while_statement -> while parentesis_izq condition parentesis_der do . ENTER statement_list wend SEMICOLON

    ENTER           shift and go to state 46


state 43

    (18) while_statement -> while parentesis_izq operando_statement parentesis_der do . ENTER statement_list wend SEMICOLON

    ENTER           shift and go to state 47


state 44

    (12) if_statement -> if parentesis_izq condition parentesis_der then ENTER . statement_list endif SEMICOLON
    (13) if_statement -> if parentesis_izq condition parentesis_der then ENTER . statement_list else ENTER statement_list endif SEMICOLON
    (1) statement_list -> . statement_list statement ENTER
    (2) statement_list -> . statement ENTER
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement_list                 shift and go to state 48
    statement                      shift and go to state 2
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 45

    (14) if_statement -> if parentesis_izq operando_statement parentesis_der then ENTER . statement_list endif SEMICOLON
    (15) if_statement -> if parentesis_izq operando_statement parentesis_der then ENTER . statement_list else ENTER statement_list endif SEMICOLON
    (1) statement_list -> . statement_list statement ENTER
    (2) statement_list -> . statement ENTER
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement_list                 shift and go to state 49
    statement                      shift and go to state 2
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 46

    (17) while_statement -> while parentesis_izq condition parentesis_der do ENTER . statement_list wend SEMICOLON
    (1) statement_list -> . statement_list statement ENTER
    (2) statement_list -> . statement ENTER
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement_list                 shift and go to state 50
    statement                      shift and go to state 2
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 47

    (18) while_statement -> while parentesis_izq operando_statement parentesis_der do ENTER . statement_list wend SEMICOLON
    (1) statement_list -> . statement_list statement ENTER
    (2) statement_list -> . statement ENTER
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . read_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . write_statement
    (9) statement -> . assignment_statement
    (11) read_statement -> . read ID SEMICOLON
    (12) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list endif SEMICOLON
    (13) if_statement -> . if parentesis_izq condition parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (14) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list endif SEMICOLON
    (15) if_statement -> . if parentesis_izq operando_statement parentesis_der then ENTER statement_list else ENTER statement_list endif SEMICOLON
    (17) while_statement -> . while parentesis_izq condition parentesis_der do ENTER statement_list wend SEMICOLON
    (18) while_statement -> . while parentesis_izq operando_statement parentesis_der do ENTER statement_list wend SEMICOLON
    (19) write_statement -> . write expression SEMICOLON
    (10) assignment_statement -> . ID EQUALS expression SEMICOLON

    read            shift and go to state 8
    if              shift and go to state 10
    while           shift and go to state 11
    write           shift and go to state 12
    ID              shift and go to state 9

    statement_list                 shift and go to state 51
    statement                      shift and go to state 2
    read_statement                 shift and go to state 3
    if_statement                   shift and go to state 4
    while_statement                shift and go to state 5
    write_statement                shift and go to state 6
    assignment_statement           shift and go to state 7

state 48
